--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,20 @@ body {
   text-decoration: none;
 }
 
+.collapsible {
+  cursor: pointer;
+  font-size: 15px;
+}
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #fdae46;
+  color: rgb(87, 11, 11);
+  border-radius: 5px;
+}
+
 .icons {
   background-color: cornsilk;
   color: rgb(143, 27, 27);
@@ -35,7 +49,7 @@ body {
   color:rgb(143, 27, 27);
   text-shadow:rgba(15, 15, 15, 0.363) 2px 2px;
   width: 50%;
-  padding: 70px;
+  padding: 4vw;
   text-align: right;
   background-color: white;
 }
@@ -57,19 +71,24 @@ body {
 .all-project {
   width: 85%;
 }
+
+.my-recent-work-line {
+  width: 70%;
+  background-color: white;
+  color: white;
+}
+
 .recent-project-image {
-  padding: 20px;
+  padding: 4vw;
   width: 50%;
   background-color:rgb(201, 157, 106);
-  height: 500px;
   border-radius: 5px;
 }
 
 .recent-project-info {
   text-align: center;
-  padding: 20px;
+  padding: 4vw;
   width: 50%;
-  line-height: 35px;
   color: white;
   font-weight: bolder;
   background-color: rgb(59, 58, 58);
@@ -88,16 +107,124 @@ button {
 
 .project-card {
   text-align: center;
-  padding: 20px;
-  width: 33%;
+  padding: 30px;
+  border-style: solid;
+  border-color: rgb(201, 157, 106);
 }
 
 .about-me {
   background-color: white;
 }
 
+.about-me-card{
+  width: 50%;
+}
+
+.about-me-image {
+  width: 50%;
+}
+
+.about-me-heading{
+  font-size: 4vh;
+  font-weight: bolder;
+  text-align: center;
+}
+
+.about-me-text {
+  font-size: 2vh;  
+  font-weight: bold; 
+  text-align: right;
+}
+
+.form-text {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+  color:white;
+}
+
 .icon-footer {
   font-size: 40px; 
   color: white;
   text-align: center;
+}
+
+@media (max-width: 768px) {
+  .quote-text {
+    width: 50%;
+    padding: 2vw;
+    text-align: right;
+  }
+
+  .all-project {
+    width: 95%;
+  }
+
+  .my-recent-work-line {
+    width: 60%;
+  }
+
+  .recent-project-image {
+    
+    width: 100%;
+  }
+
+  .recent-project-info {
+    width: 100%;
+  }
+  
+}
+
+@media (max-width: 425px) {
+  .icons {
+    font-size: 36px;
+    align-items: center;
+    padding-top: 100px;
+    width: 8%;
+  }
+
+  .quote-text {
+    width: 50%;
+    text-align: right;
+  }
+
+  .quote-title {
+    font-size: 20px !important;
+  }
+
+  .quote-subtitle {
+    font-size: 17px !important;
+  }
+
+  .quote-subtext {
+    font-size: 16px !important;
+  }
+
+  .my-recent-work-line {
+    width: 20%;
+  }
+
+  .about-me-card{
+    width: 75%;
+  }
+
+  .about-me-image {
+    width: 25%;
+  }
+
+  .form-text-container {
+    width: 40%;
+  }
+
+  .info-form {
+    width: 60%;
+  }
+
+  .form-text {
+    
+    font-size: 20px;
+  }
+  
 }
